modified ci to export artifacts

--- a/.github/workflows/ci_mac.yml
+++ b/.github/workflows/ci_mac.yml
@@ -53,3 +53,9 @@ jobs:
         with:
           run: yarn run integrationTests
           working-directory: Extension
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: extension
+          path: ./Extension/
